--- a/c3_index.html
+++ b/c3_index.html
@@ -1,22 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-	<meta charset="utf-8">
-	<title>San Joaquin Valley Town Hall</title>
-	<link rel="shortcut icon" href="images/favicon.ico">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>San Joaquin Valley Town Hall</title>
 </head>
-
 <body>
-	<header>
-		San Joaquin Valley Town Hall
-		Celebrating our 75th Year		
-	</header>
-	<main>
-		
-	</main>
-	<footer>
-		(c) 2022, San Joaquin Valley Town Hall, Fresno, CA 93755		
-	</footer>
+    <!-- Header Section -->
+    <header>
+        <img src="images/town_hall_logo.gif" alt="San Joaquin Valley Town Hall Logo" height="80">
+        <h2>San Joaquin Valley Town Hall</h2>
+        <h3>Celebrating our 78<sup>th</sup> Year</h3>
+    </header>
+
+    <!-- Main Content Section -->
+    <main>
+        <h2>Our Mission</h2>
+        <p>San Joaquin Valley Town Hall is a non-profit organization that is run by an all-volunteer board of directors. 
+        Our mission is to bring nationally and internationally renowned, thought-provoking speakers who inform, educate, and entertain our audience.</p>
+        <blockquote>“Each year I give a ticket package to each of our family members. I think of it as the gift of knowledge... and that is priceless.”</blockquote>
+
+        <h2>Our Ticket Packages</h2>
+        <ul>
+            <li>Season Package: $95</li>
+            <li>Patron Package: $90</li>
+            <li>Single Speaker: $25</li>
+        </ul>
+
+        <h1>This season's guest speakers</h1>
+        
+        <h3>October<br>David Brancaccio</h3>
+        <a href="speakers/brancaccio.html">
+            <img src="images/brancaccio75.jpg" alt="David Brancaccio" height="75">
+        </a>
+        <p>David Brancaccio is the host of Marketplace Morning Report...</p>
+    </main>
+
+    <!-- Footer Section -->
+    <footer>
+        <p>&copy; 2022, San Joaquin Valley Town Hall, Fresno, CA 93725</p>
+    </footer>
 </body>
 </html>
